# crewai-platform

./: .gitignore  CLAUDE.md  CREWAI_INTEGRATION.md  PROJECT_STRUCTURE.md  dev.sh  start_all.sh  stop_all.sh  test_chat_api.py  v0.0.1-20250807.md
.claude/: settings.local.json
backend/: database_schema.sql  init_database.sql  manage.py  pyproject.toml  start.sh  start_websocket.sh
backend/crewaiplatform/: admin.py  apps.py  asgi.py  consumers.py  middleware.py  models.py  routing.py  serializers.py  serializers_backup.py  services.py  settings.py  test_consumer.py  urls.py  views.py  views_backup.py.old  wsgi.py
backend/crewaiplatform.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/crewaiplatform/admin/: __init__.py  crewai_admin.py  dictionary_admin.py  rbac_admin.py
backend/crewaiplatform/migrations/: 0001_initial.py  0002_add_crewai_models.py  0002_alter_llmmodel_provider.py  0003_add_dictionary_models.py  0003_chat_models.py  0003_create_dictionary_model.py
backend/crewaiplatform/models/: __init__.py  agent_tool_relation.py  chat_agent_task.py  chat_conversation.py  chat_message.py  crewai_agent.py  dictionary.py  llm_model.py  mcp_tool.py  permission.py  role.py  role_permission.py  user.py  user_role.py
backend/crewaiplatform/serializers/: __init__.py  auth_serializers.py  chat_serializers.py  crewai_serializers.py  dictionary_serializers.py  rbac_serializers.py  stats_serializers.py
backend/crewaiplatform/services/: __init__.py  agent_service.py  auth_service.py  chat_service.py  llm_service.py  mcp_service.py  permission_service.py  rbac_service.py  role_service.py  simple_agent_service.py  user_service.py
backend/crewaiplatform/tests/: __init__.py  test_dictionary.py
backend/crewaiplatform/views/: __init__.py  auth_views.py  chat_views.py  crewai_views.py  dictionary_views.py  user_views.py
frontend/: .env  .env.development  .env.production  package-lock.json  package.json  start.sh
frontend/src/: App.vue  http.js  main.js
frontend/src/assets/: main.css
frontend/src/components/: AgentCard.vue  AgentConfigDialog.vue  AgentPanel.vue  AgentStatus.vue  ChatSidebar.vue  MCPToolCallDialog.vue  MCPToolCard.vue  MCPToolConfigDialog.vue  MessageInput.vue  MessageList.vue  SettingsDialog.vue  TaskExecutionDialog.vue  ToolBindingConfig.vue  ToolBindingDialog.vue
frontend/src/router/: index.js
frontend/src/services/: api.js
frontend/src/store/: index.js
frontend/src/views/: AgentManagement.vue  ChatInterface.vue  Dashboard.vue  DictionaryManagement.vue  Home.vue  LLMModelManagement.vue  Login.vue  MCPToolManagement.vue  PermissionManagement.vue  Register.vue  RoleManagement.vue  RolePermission.vue  UserManagement.vue
scripts/: README.md  init_backend.sh  init_crewai_data.sh  init_data.sh  init_database.sh  init_dictionary_data.sh  init_frontend.sh  reset_and_init.sh  reset_database.sh
test/: README.md  debug_agent.py  run_tests.py  run_websocket_tests.py  test_agent_management.py  test_agent_update.py  test_api.py  test_auth.py  test_base.py  test_clone_disable.py  test_comprehensive.py  test_config.py  test_dictionary_management.py  test_dictionary_parent_display.py  test_dictionary_tree_display.py  test_error_handling.py  test_llm_agent_tool.py  test_mcp_health_check.py  test_mcp_tool_management.py  test_patch_disable.py  test_streaming_integration.py  test_toggle_complete.py  test_tree_dictionary_edit.py  test_websocket_functionality.py
